src/components/shared/page/header/Header.module.scss
.header {
  position: fixed;
  z-index: 4;
  width: 100%;
  height: 96px;
  padding: 0 40px;
  backdrop-filter: blur(11px);
  background-color: rgb(255 255 255 / 70%);
  color: #555;
  transition: background-color 0.2s ease-in-out;

  .alignRight {
    margin-left: auto !important;
  }

  .dark {
    color: #fff !important;
  }

  .headerTopContainer {
    width: 100%;
    height: 100%;
  }

  &.menuOpened {
    height: fit-content;
    padding: 0;
    background-color: #11627d;

    .headerTopContainer {
      width: 100%;
      height: 96px;
      padding: 0 40px;
      padding-right: 46px;
      background-color: transparent;
      background-color: #11627d;
      transition: background-color 0.2s ease-in-out;
    }

    .container,
    .container a {
      background-color: #11627d !important;
      color: #fff;

      .favoriteLink,
      .compareLink {
        span {
          background-color: #fd7628;
        }
      }

      .toggleMenuButton {
        svg {
          width: 23px;
          height: 23px;
        }
      }
    }

    .logoutButton {
      path {
        fill: #fff;
        transition: fill 0.2s ease-in-out;
      }
    }

    .phoneIcon svg path {
      fill: #fff;
    }

    .menu {
      opacity: 1;
      transform: translateY(0);
    }
  }

  .phoneIcon {
    display: none;
    width: 32px;
    height: 32px;
    align-items: center;
    justify-content: center;
    margin-left: auto;

    svg {
      width: 24px;
      height: 24px;

      path {
        fill: #555;
      }
    }
  }

  .container {
    position: relative;
    display: flex;
    width: 100%;
    height: 100%;
    flex-wrap: wrap;
    align-items: center;
    margin: 0 auto;

    .logo {
      height: 100%;
    }

    .personalCabinetLink {
      margin-left: 74px;
      text-transform: uppercase;
    }

    .phoneLink {
      margin-left: 40px;
    }

    .logoutButton {
      display: flex;
      width: auto;
      height: 100%;
      aspect-ratio: 1/1;
    }

    .compareLink {
      margin-left: auto;

      .icon {
        width: 30px;
        height: 30px;
      }
    }

    .favoriteLink {
      margin-left: 40px;

      .icon {
        width: 30px;
        height: 30px;
      }
    }

    .findApartment {
      margin-left: 40px;
    }

    .toggleMenuButton {
      margin-left: 54px;
    }
  }

  .mobileMenu {
    display: none;
    width: 100%;
    height: fit-content;
    flex-wrap: wrap;
    padding-top: 20px;
    background-color: #11627d;
    gap: 10px;
    transition: all 0.3s;

    .mobilePersonalCabinetLink {
      display: grid;
      min-width: 200px;
      height: 48px;
      flex: 0 0 0 48px;
      flex-grow: 1;
      align-items: center;
      justify-content: center;
      padding-top: 8px;
      padding-right: 4px;
      border-radius: 6px;
      background-color: rgb(255 255 255 / 16%);
      color: #fff;
      gap: 14px;
      grid-template-columns: auto auto;

      .a {
        display: flex;
        width: fit-content;
        height: 100%;
        align-items: center;
        justify-content: center;
      }

      .userLogo {
        svg {
          height: 20px;
        }
      }
    }

    .mobileCompareLink,
    .mobileFavoriteLink {
      display: flex;
      width: 48px;
      height: 48px;
      flex: 0 0 0 48px;
      align-items: center;
      justify-content: center;
      border-radius: 6px;
      background-color: rgb(255 255 255 / 16%);
      color: #fff;

      svg {
        width: 24px;
        height: 24px;
        margin-top: 2px;
        margin-left: 2px;
      }

      span {
        margin-left: 6px;
        background-color: #fd7628;
      }
    }
  }

  .menu {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    display: grid;
    width: 100%;
    height: fit-content;
    min-height: 100dvh;
    max-height: 100dvh;
    padding-top: 96px;
    background-color: #11627d;
    grid-template-rows: 1fr auto;
    opacity: 0;
    overflow-y: auto;
    transform: translateY(-100%);
    transition:
      transform 0.6s ease-in-out,
      opacity 0.2s ease-in-out;

    @include custom(0, map-get($breakpoints, xl) - 1px) {
      padding-top: 71px;
    }

    @include custom(0, map-get($breakpoints, lg) - 1px) {
      padding-top: 144px;
    }

    @include custom(0, map-get($breakpoints, md) - 1px) {
      padding-top: 134px;
    }

    @include custom(0, map-get($breakpoints, sm) - 1px) {
      padding-top: 174px;
    }

    @include custom(0, map-get($breakpoints, xs) - 1px) {
      padding-top: 130px;
    }

    .menu_inner {
      position: relative;
      display: grid;
      width: 100%;
      height: 100%;
      grid-template-rows: 1fr auto;

      .headerMenuBottom {
        width: 100%;
        height: fit-content;
      }
    }
  }
}

@include custom(0, map-get($breakpoints, xl) - 1px) {
  .header {
    height: 86px;

    &.menuOpened {
      .headerTopContainer {
        height: 86px;
        padding: 0 40px;
      }

      .container {
        .toggleMenuButton {
          margin-left: 42px;

          svg {
            width: 23px;
            height: 23px;
          }
        }
      }
    }

    .container {
      .logo {
        .small {
          svg {
            height: 60px !important;
          }
        }

        svg {
          height: 174px;
        }
      }

      .personalCabinetLink {
        margin-left: 48px;
      }

      .findApartment {
        display: none;
      }

      .toggleMenuButton {
        margin-left: 45px;

        svg {
          height: 24px;
        }
      }
    }
  }
}

@include custom(0, map-get($breakpoints, lg) - 1px) {
  .header {
    height: 68px;

    &.menuOpened {
      .headerTopContainer {
        height: 156px;
      }

      .container {
        height: 68px;

        .toggleMenuButton {
          margin-right: 0;
          margin-left: 42px;

          svg {
            width: 20px;
            height: 20px;
          }
        }
      }

      .mobileMenu {
        display: flex;
      }
    }

    .container {
      .phoneLink {
        margin-left: auto;
      }

      .personalCabinetLink,
      .compareLink,
      .favoriteLink {
        display: none;
      }

      .logo {
        margin-left: -26px;

        a {
          width: 68px !important;

          svg {
            height: 134px;
          }
        }
      }
    }
  }
}

@include custom(0, map-get($breakpoints, md) - 1px) {
  .header {
    padding: 0 12px;

    &.menuOpened {
      height: fit-content;

      .headerTopContainer {
        padding: 0 12px;
      }

      .container {
        height: 68px !important;

        .toggleMenuButton {
          margin-left: 23px;
        }

        .logo {
          a {
            svg {
              height: 70px !important;
            }
          }
        }
      }

      .mobileMenu {
        padding-right: 8px;
        padding-left: 8px;
      }
    }

    .container {
      .toggleMenuButton {
        margin-left: 30px;
      }

      .logo {
        margin-left: 8px;

        a {
          svg {
            height: 126px;
          }
        }
      }
    }
  }
}

@include custom(0, map-get($breakpoints, sm) - 1px) {
  .header {
    &.menuOpened {
      .headerTopContainer {
        height: 124px;
      }

      .container {
        height: 64px !important;

        .toggleMenuButton {
          margin-left: 12px !important;

          svg {
            width: 18px;
            height: 18px;
            margin-top: -6px;
            margin-right: 1px;
          }
        }
      }

      .menu {
        padding-top: 160px;
      }

      .mobileMenu {
        padding-right: 4px;
        padding-left: 4px;
        margin-top: 2px;

        .mobilePersonalCabinetLink {
          min-width: 100px;
          height: 36px;
          padding-top: 0;

          a {
            font-size: 12px;
          }
        }

        .mobileCompareLink,
        .mobileFavoriteLink {
          width: 36px;
          height: 36px;

          .link {
            width: 20px;
            height: 20px;

            svg {
              width: 20px;
              height: 20px;
            }
          }
        }
      }
    }

    .container {
      .phoneLink {
        display: none;
      }

      .phoneIcon {
        display: block;
      }

      .toggleMenuButton {
        margin-left: 24px;
      }

      .logo {
        a {
          svg {
            height: 106px;
          }
        }
      }
    }
  }
}

@include custom(0, map-get($breakpoints, xs) - 1px) {
  header.header .container {
    padding-right: 0 !important;
  }

  .mobileMenu {
    padding: 0 !important;
  }
}

